--- a/index.html
+++ b/index.html
@@ -1,1 +1,19 @@
+<!DOCTYPE html>
+<html lang="es">
+    <head>
+        <meta charset="utf-8">
+        <meta name="description" content="Ejemplo de HTMls">
+                <title>Futbolistas</title>
+        <link rel="stylesheet" href="estilo.css">
+    </head>
+        <body>
+            <div class="contenedor">
 
+                <div class="tarjeta" id="CR7"><h3>Cristiano</h3></div>
+                <div class="tarjeta" id="Bale"><h3>Bale</h3></div>
+                <div class="tarjeta" id="marcelo"><h3>Marcelo</h3></div>
+                <div class="tarjeta" id="kaká"><h3>Kaká</h3></div>
+                <div class="tarjeta" id="Ney"><h3>Neymar</h3></div>
+            </div>
+        </body>
+</html> 
